--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.6",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "axios": "^1.3.4",
+    "expo": "^48.0.9",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.3"
+    "react-dom": "^18.2.0",
+    "react-native": "0.71.3",
+    "react-native-ionicons": "^4.6.5",
+    "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-web": "~0.18.11",
+    "styled-component": "^2.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
