--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-web": "~0.18.11",
-    "styled-component": "^2.8.0"
+    "styled-component": "^2.8.0",
+    "@expo/webpack-config": "^18.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
