--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "expo": "^48.0.9",
     "expo-secure-store": "~12.1.1",
     "expo-status-bar": "~1.4.4",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.3",
+    "react-native-calendar-picker": "^7.1.4",
+    "react-native-date-picker": "^4.2.10",
     "react-native-dotenv": "^3.4.8",
     "react-native-ionicons": "^4.6.5",
     "react-native-iphone-x-helper": "^1.3.1",
