--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "mundom",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
@@ -20,8 +19,6 @@
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.3",
-    "react-native-calendar-picker": "^7.1.4",
-    "react-native-date-picker": "^4.2.10",
     "react-native-dotenv": "^3.4.8",
     "react-native-ionicons": "^4.6.5",
     "react-native-iphone-x-helper": "^1.3.1",
